Desktop/FullTime/Jobs/2026CV/CV/DataEngineer/Sponsership/DevOps/CV/Ronakbhai/Projects/gitops-platform-engineering/apps/sample-service/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-service
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
