Desktop/FullTime/Jobs/2026CV/CV/DataEngineer/Sponsership/DevOps/CV/Ronakbhai/Projects/gitops-platform-engineering/apps/sample-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app.kubernetes.io/name: sample-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
